# RustPythonCPPBazel

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
config/: .env.example  .gitignore  cpp_details.txt  update_policy.txt
cpp/: BUILD.bazel  bindings.cpp  cppm.bzl  cppm_use_demo_test.cpp  demo.cppm  mp_test.hpp  solvers.hpp  solvers_module_iface.cpp  solvers_test.cpp
docs/: INDEX.md
prolog/: BUILD.bazel  maze.pl  sudoku.pl
python/: BUILD.bazel  demo.py
python/multiparadigm/: __init__.py  prolog.py
python/tests/: test_multiparadigm.py
rust/multiparadigm_rust/: BUILD.bazel  Cargo.toml
rust/multiparadigm_rust/src/: lib.rs  solvers.rs
scripts/: backup_to_nas.sh  push_remotes.sh
tools/: run_verification.sh
